You can check result on map

--- a/src/main/resources/templates/findCity.html
+++ b/src/main/resources/templates/findCity.html
@@ -23,7 +23,8 @@
         <span class="input-group-text">Miasto</span>
         <input th:field="*{name}" type="text" aria-label="Tytuł" class="form-control">
     </div>
-    &nbsp;<button type="submit" class="btn btn-dark">Szukaj</button>
+    <br><button type="submit" name="map" class="btn btn-dark" value="Map">Pokaż na mapie</button>
+    <button type="submit" name="list" class="btn btn-dark" value="List">Pokaż na liście</button>
 
 </form>
 
